# factmesh

./: .gitignore  README.md  pyproject.toml
factmesh/: __init__.py  __main__.py  graph.py  resolver.py  viz.py
input/SYC2024_Staff_Report/: metadata.json  narrative_claims.json
input/SYC2024_Staff_Report/tables/: Table_13_p58.json  Table_16_p66.json  Table_19_p74.json  Table_1_p132.json  Table_1_p15.json  Table_1_p49.json  Table_1_p74.json  Table_1_p96.json  Table_20_p74.json  Table_22_p81.json  Table_22_p81_idx2.json  Table_23_p82.json  Table_23_p82_idx2.json  Table_23_p82_idx3.json  Table_24_p83.json  Table_24_p83_idx2.json  Table_24_p83_idx3.json  Table_25_p84.json  Table_25_p84_idx2.json  Table_25_p84_idx3.json  Table_26_p85.json  Table_26_p85_idx2.json  Table_26_p85_idx3.json  Table_27_p86.json  Table_27_p86_idx2.json  Table_27_p86_idx3.json  Table_39_p144.json  Table_3_p23.json  Table_42_p144.json  Table_4_p47.json  Table_9_p52.json
macroproof/: __init__.py  __main__.py  graph.py  viz.py
output/SYC2024_Staff_Report/: consistency_graph.json  consistency_report.md  verification_summary.html
