[project]
name = "macroproof"
version = "0.1.0"
description = "Automated macro-consistency verification for IMF Staff Reports."
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "openai>=1.30.0",
    "pydantic>=2.5.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
